# xray_switcher

./: .gitignore  basic_logger.py  current.json  pyproject.toml  readme.md  supervisor.conf
proxies/: build_config.py  main.py  switcher.py
